--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -8,9 +8,7 @@
     <link rel="icon" type="image/x-icon" href="/public/favicon.ico" />
   </head>
   <body>
-    <div id="root">
-      <img class="loader" >
-    </div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
